--- a/potrfolio.html
+++ b/potrfolio.html
@@ -12,7 +12,7 @@
 			<a href="./index.html"><span>Web</span><span>Studio</span></a>
 			<nav>
 				<ul>
-					<li><a href="">Студія</a></li>
+					<li><a href="./index.html">Студія</a></li>
 					<li><a href="">Портфоліо</a></li>
 					<li><a href="">Контакти/a></li>
 				</ul>
