--- a/potrfolio.html
+++ b/potrfolio.html
@@ -14,7 +14,7 @@
 				<ul>
 					<li><a href="./index.html">Студія</a></li>
 					<li><a href="">Портфоліо</a></li>
-					<li><a href="">Контакти/a></li>
+					<li><a href="">Контакти</a></li>
 				</ul>
 			</nav>
 			<ul>
@@ -24,7 +24,17 @@
 				<li><a href="tel:+380961111111"></a>+38 096 111 11 11</li>
 			</ul>
 		</header>
-		<main></main>
+		<main>
+			<section class="filter">
+				<ul>
+					<li><button type="" button>Усі</button></li>
+					<li><button type="" button>Веб-сайти</button></li>
+					<li><button type="" button>Додатки</button></li>
+					<li><button type="" button>Дизайн</button></li>
+					<li><button type="" button>Маркетинг</button></li>
+				</ul>
+			</section>
+		</main>
 		<footer>
 			<a href="./index.html"><span>Web</span><span>Studio</span></a>
 			<address>
