--- a/potrfolio.html
+++ b/potrfolio.html
@@ -25,13 +25,60 @@
 			</ul>
 		</header>
 		<main>
-			<section class="filter">
+			<section class="projects">
+				<ul class="filter">
+					<li><button type="button">Усі</button></li>
+					<li><button type="button">Веб-сайти</button></li>
+					<li><button type="button">Додатки</button></li>
+					<li><button type="button">Дизайн</button></li>
+					<li><button type="button">Маркетинг</button></li>
+				</ul>
 				<ul>
-					<li><button type="" button>Усі</button></li>
-					<li><button type="" button>Веб-сайти</button></li>
-					<li><button type="" button>Додатки</button></li>
-					<li><button type="" button>Дизайн</button></li>
-					<li><button type="" button>Маркетинг</button></li>
+					<li>
+						<img src="" alt="" />
+						<h2></h2>
+						<p></p>
+					</li>
+					<li>
+						<img src="" alt="" />
+						<h2></h2>
+						<p></p>
+					</li>
+					<li>
+						<img src="" alt="" />
+						<h2></h2>
+						<p></p>
+					</li>
+					<li>
+						<img src="" alt="" />
+						<h2></h2>
+						<p></p>
+					</li>
+					<li>
+						<img src="" alt="" />
+						<h2></h2>
+						<p></p>
+					</li>
+					<li>
+						<img src="" alt="" />
+						<h2></h2>
+						<p></p>
+					</li>
+					<li>
+						<img src="" alt="" />
+						<h2></h2>
+						<p></p>
+					</li>
+					<li>
+						<img src="" alt="" />
+						<h2></h2>
+						<p></p>
+					</li>
+					<li>
+						<img src="" alt="" />
+						<h2></h2>
+						<p></p>
+					</li>
 				</ul>
 			</section>
 		</main>
