add mnarkup portfolio

--- a/potrfolio.html
+++ b/potrfolio.html
@@ -35,49 +35,94 @@
 				</ul>
 				<ul>
 					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+						<img
+							src="./images/portfolio1.jpg"
+							alt=""
+							width="370px"
+							height="294px"
+						/>
+						<h2>Технокряк</h2>
+						<p>Веб-сайт</p>
 					</li>
 					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+						<img
+							src="./images/portfolio2.jpg"
+							alt=""
+							width="370px"
+							height="294px"
+						/>
+						<h2>Постер New Orlean vs Golden Star</h2>
+						<p>Дизайн</p>
 					</li>
 					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+						<img
+							src="./images/portfolio3.jpg"
+							alt=""
+							width="370px"
+							height="294px"
+						/>
+						<h2>Ресторан Seafood</h2>
+						<p>Додаток</p>
 					</li>
 					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+						<img
+							src="./images/portfolio4.jpg"
+							alt=""
+							width="370px"
+							height="294px"
+						/>
+						<h2>Проєкт Prime</h2>
+						<p>Маркетинг</p>
 					</li>
 					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+						<img
+							src="./images/portfolio5.jpg"
+							alt=""
+							width="370px"
+							height="294px"
+						/>
+						<h2>Проєкт Boxes</h2>
+						<p>Додаток</p>
 					</li>
 					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+						<img
+							src="./images/portfolio6.jpg"
+							alt=""
+							width="370px"
+							height="294px"
+						/>
+						<h2>Inspiration has no Borders</h2>
+						<p>Веб-сайт</p>
 					</li>
 					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+						<img
+							src="./images/portfolio7.jpg"
+							alt=""
+							width="370px"
+							height="294px"
+						/>
+						<h2>Видання Limited Edition</h2>
+						<p>Дизайн</p>
 					</li>
 					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+						<img
+							src="./images/portfolio8.jpg"
+							alt=""
+							width="370px"
+							height="294px"
+						/>
+						<h2>Проєкт LAB</h2>
+						<p>Маркетинг</p>
 					</li>
 					<li>
-						<img src="" alt="" />
-						<h2></h2>
-						<p></p>
+						<img
+							src="./images/portfolio9.jpg"
+							alt=""
+							width="370px"
+							height="294px"
+						/>
+						<h2>Growing Business</h2>
+						<p>Додаток</p>
 					</li>
 				</ul>
 			</section>
