--- a/potrfolio.html
+++ b/potrfolio.html
@@ -5,6 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<!--Header-->
@@ -38,8 +45,8 @@
 						<img
 							src="./images/portfolio1.jpg"
 							alt=""
-							width="370px"
-							height="294px"
+							width="370"
+							height="294"
 						/>
 						<h2>Технокряк</h2>
 						<p>Веб-сайт</p>
@@ -48,8 +55,8 @@
 						<img
 							src="./images/portfolio2.jpg"
 							alt=""
-							width="370px"
-							height="294px"
+							width="370"
+							height="294"
 						/>
 						<h2>Постер New Orlean vs Golden Star</h2>
 						<p>Дизайн</p>
@@ -58,8 +65,8 @@
 						<img
 							src="./images/portfolio3.jpg"
 							alt=""
-							width="370px"
-							height="294px"
+							width="370"
+							height="294"
 						/>
 						<h2>Ресторан Seafood</h2>
 						<p>Додаток</p>
@@ -68,8 +75,8 @@
 						<img
 							src="./images/portfolio4.jpg"
 							alt=""
-							width="370px"
-							height="294px"
+							width="370"
+							height="294"
 						/>
 						<h2>Проєкт Prime</h2>
 						<p>Маркетинг</p>
@@ -78,8 +85,8 @@
 						<img
 							src="./images/portfolio5.jpg"
 							alt=""
-							width="370px"
-							height="294px"
+							width="370"
+							height="294"
 						/>
 						<h2>Проєкт Boxes</h2>
 						<p>Додаток</p>
@@ -88,8 +95,8 @@
 						<img
 							src="./images/portfolio6.jpg"
 							alt=""
-							width="370px"
-							height="294px"
+							width="370"
+							height="294"
 						/>
 						<h2>Inspiration has no Borders</h2>
 						<p>Веб-сайт</p>
@@ -98,8 +105,8 @@
 						<img
 							src="./images/portfolio7.jpg"
 							alt=""
-							width="370px"
-							height="294px"
+							width="370"
+							height="294"
 						/>
 						<h2>Видання Limited Edition</h2>
 						<p>Дизайн</p>
@@ -108,8 +115,8 @@
 						<img
 							src="./images/portfolio8.jpg"
 							alt=""
-							width="370px"
-							height="294px"
+							width="370"
+							height="294"
 						/>
 						<h2>Проєкт LAB</h2>
 						<p>Маркетинг</p>
@@ -118,8 +125,8 @@
 						<img
 							src="./images/portfolio9.jpg"
 							alt=""
-							width="370px"
-							height="294px"
+							width="370"
+							height="294"
 						/>
 						<h2>Growing Business</h2>
 						<p>Додаток</p>
