--- a/potrfolio.html
+++ b/potrfolio.html
@@ -5,13 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<link rel="stylesheet" href="./css/styles.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
 		<!--Header-->
@@ -33,6 +33,7 @@
 		</header>
 		<main>
 			<section class="projects">
+				<h1>Portfolio</h1>
 				<ul class="filter">
 					<li><button type="button">Усі</button></li>
 					<li><button type="button">Веб-сайти</button></li>
@@ -42,94 +43,112 @@
 				</ul>
 				<ul>
 					<li>
-						<img
-							src="./images/portfolio1.jpg"
-							alt=""
-							width="370"
-							height="294"
-						/>
-						<h2>Технокряк</h2>
-						<p>Веб-сайт</p>
+						<a href="">
+							<img
+								src="./images/portfolio1.jpg"
+								alt=""
+								width="370"
+								height="294"
+							/>
+							<h2>Технокряк</h2>
+							<p>Веб-сайт</p>
+						</a>
 					</li>
 					<li>
-						<img
-							src="./images/portfolio2.jpg"
-							alt=""
-							width="370"
-							height="294"
-						/>
-						<h2>Постер New Orlean vs Golden Star</h2>
-						<p>Дизайн</p>
+						<a href="">
+							<img
+								src="./images/portfolio2.jpg"
+								alt=""
+								width="370"
+								height="294"
+							/>
+							<h2>Постер New Orlean vs Golden Star</h2>
+							<p>Дизайн</p>
+						</a>
 					</li>
 					<li>
-						<img
-							src="./images/portfolio3.jpg"
-							alt=""
-							width="370"
-							height="294"
-						/>
-						<h2>Ресторан Seafood</h2>
-						<p>Додаток</p>
+						<a href="">
+							<img
+								src="./images/portfolio3.jpg"
+								alt=""
+								width="370"
+								height="294"
+							/>
+							<h2>Ресторан Seafood</h2>
+							<p>Додаток</p>
+						</a>
 					</li>
 					<li>
-						<img
-							src="./images/portfolio4.jpg"
-							alt=""
-							width="370"
-							height="294"
-						/>
-						<h2>Проєкт Prime</h2>
-						<p>Маркетинг</p>
+						<a href="">
+							<img
+								src="./images/portfolio4.jpg"
+								alt=""
+								width="370"
+								height="294"
+							/>
+							<h2>Проєкт Prime</h2>
+							<p>Маркетинг</p>
+						</a>
 					</li>
 					<li>
-						<img
-							src="./images/portfolio5.jpg"
-							alt=""
-							width="370"
-							height="294"
-						/>
-						<h2>Проєкт Boxes</h2>
-						<p>Додаток</p>
+						<a href="">
+							<img
+								src="./images/portfolio5.jpg"
+								alt=""
+								width="370"
+								height="294"
+							/>
+							<h2>Проєкт Boxes</h2>
+							<p>Додаток</p>
+						</a>
 					</li>
 					<li>
-						<img
-							src="./images/portfolio6.jpg"
-							alt=""
-							width="370"
-							height="294"
-						/>
-						<h2>Inspiration has no Borders</h2>
-						<p>Веб-сайт</p>
+						<a href="">
+							<img
+								src="./images/portfolio6.jpg"
+								alt=""
+								width="370"
+								height="294"
+							/>
+							<h2>Inspiration has no Borders</h2>
+							<p>Веб-сайт</p>
+						</a>
 					</li>
 					<li>
-						<img
-							src="./images/portfolio7.jpg"
-							alt=""
-							width="370"
-							height="294"
-						/>
-						<h2>Видання Limited Edition</h2>
-						<p>Дизайн</p>
+						<a href="">
+							<img
+								src="./images/portfolio7.jpg"
+								alt=""
+								width="370"
+								height="294"
+							/>
+							<h2>Видання Limited Edition</h2>
+							<p>Дизайн</p>
+						</a>
 					</li>
 					<li>
-						<img
-							src="./images/portfolio8.jpg"
-							alt=""
-							width="370"
-							height="294"
-						/>
-						<h2>Проєкт LAB</h2>
-						<p>Маркетинг</p>
+						<a href="">
+							<img
+								src="./images/portfolio8.jpg"
+								alt=""
+								width="370"
+								height="294"
+							/>
+							<h2>Проєкт LAB</h2>
+							<p>Маркетинг</p>
+						</a>
 					</li>
 					<li>
-						<img
-							src="./images/portfolio9.jpg"
-							alt=""
-							width="370"
-							height="294"
-						/>
-						<h2>Growing Business</h2>
-						<p>Додаток</p>
+						<a href="">
+							<img
+								src="./images/portfolio9.jpg"
+								alt=""
+								width="370"
+								height="294"
+							/>
+							<h2>Growing Business</h2>
+							<p>Додаток</p>
+						</a>
 					</li>
 				</ul>
 			</section>
